fix(calendar): buttons cut off on smaller mobile phones

--- a/apps/client/src/widgets/collections/calendar/index.css
+++ b/apps/client/src/widgets/collections/calendar/index.css
@@ -92,6 +92,8 @@
         .center-container {
             .title {
                 flex-grow: 1;
+                min-width: 110px;
+                font-size: 0.95em;
             }
         }
     }
